SERVER-8710 check balancer is stopped before upgrading to nonzero config version